--- a/config/database.yml
+++ b/config/database.yml
@@ -3,18 +3,19 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
-
 #development:
- # adapter: sqlserver
- # host: mydb.net
- # database: myapp_development
+ # adapter: sqlite3
+ # database: db/development.sqlite3
  # pool: 5
  # timeout: 5000
+
+development:
+  adapter: sqlserver
+  host: # ip address
+  port: # port
+  database: # railsDev
+  username: # railsUser
+  password: # password 
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
