--- a/config/database.yml
+++ b/config/database.yml
@@ -14,8 +14,13 @@ development:
   host: 140.113.73.51
   port: 5566
   database: railsDev
-  username: netlab
+  username: maydaycha
   password: root
+
+  # adapter: sqlite3
+  # database: db/test.sqlite3
+  # pool: 5
+  # timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
