--- a/config/database.yml
+++ b/config/database.yml
@@ -3,38 +3,23 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-#development:
- # adapter: sqlite3
- # database: db/development.sqlite3
- # pool: 5
- # timeout: 5000
+#
+default: &default
+  adapter: sqlite3
+  pool: 5
+  timeout: 5000
 
 development:
-  adapter: sqlserver
-  host: 140.113.73.51
-  port: 5566
-  database: railsDev
-  username: netlab
-  password: root
-
-  # adapter: sqlite3
-  # database: db/test.sqlite3
-  # pool: 5
-  # timeout: 5000
+  <<: *default
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
+  <<: *default
   database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
 
 production:
-  adapter: sqlserver
-  host: 140.113.73.51
-  port: 5566
-  database: railsDev
-  username: netlab
-  password: root
+  <<: *default
+  database: db/production.sqlite
